--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
+<header>
 <h1>
   {{title}}
-</h1>
+</h1>  
+  <nav>
+    <ul>
+      <li>link</li>
+      <li>link</li>
+    </ul>
+  </nav>
+<section id="main">
+    <app-home>content inside tags</app-home>
+</section>
+</header>
