--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,5 @@
 <p>
   {{homeTitle}}!
 </p>
-<ng-content></ng-content>
-
-<input value="{{myString}}" />
-<input attr.required="{{myBoolean}}" />
-<button (click)="alertMe('Time to sleep')">Click me </button>
+<p> {{ninja.name}} </p>
+<p> {{ninja.belt}} </p>
